--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/nvd3/1.8.2/nv.d3.min.css" rel="stylesheet">
 	
 	
-	<link href="/rcon.css" rel="stylesheet">
+	<link href="rcon.css" rel="stylesheet">
   </head>
   <body ng-cloak layout="row" ng-controller="RconController">
   
@@ -64,7 +64,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/nvd3/1.8.2/nv.d3.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-nvd3/1.0.5/angular-nvd3.min.js"></script>
 	
-	<script src="/rcon.js"></script>
+	<script src="rcon.js"></script>
 	
   </body>
 </html>
