--- a/html/playerlist.html
+++ b/html/playerlist.html
@@ -6,7 +6,7 @@
 			<md-list-item class="md-3-line" layout="row" style="min-height: auto;">
 				<div flex layout="row">
 					<div flex class="md-list-item-text">
-						<h3><a href="/#/player/{{line.SteamID}}/">{{line.DisplayName}}</a></h3>
+						<h3><a href="#/player/{{line.SteamID}}/">{{line.DisplayName}}</a></h3>
 					</div>
 				</div>
 
