--- a/html/playerXp.html
+++ b/html/playerXp.html
@@ -1,6 +1,63 @@
 
 <div ng-controller="PlayerXpController" flex layout="column" id="PlayerXpController">
 
-Show info about this player xp here
+	<md-content flex layout-padding>
+
+		<h2>Statistics for player <a href="#/player/{{userid}}/">{{userid}}</a></h2>
+
+		<div layout="row" layout-sm="column">
+
+			<div flex>
+				<md-card>
+					<md-card-title>
+						<md-card-title-text>
+							<span class="md-headline">Xp Income Sources</span>
+							<span class="md-subhead">Where has this user got their Xp from</span>
+						</md-card-title-text>
+					</md-card-title>	
+					<md-card-content layout="row" layout-align="space-between">
+						<md-card-title-media flex>
+							<nvd3 flex options="Sources.Options" data="Sources.Data"></nvd3>
+						</md-card-title-media>
+					</md-card-content>
+				</md-card>
+			</div>
+
+			<div flex>
+				<md-card>
+					<md-card-title>
+						<md-card-title-text>
+							<span class="md-headline">Xp Outgoing Sources</span>
+							<span class="md-subhead">Where has this user spent their Xp</span>
+						</md-card-title-text>
+					</md-card-title>
+					<md-card-content layout="row" layout-align="space-between">
+						<md-card-title-media flex>
+							<nvd3 flex options="Outgoings.Options" data="Outgoings.Data"></nvd3>
+						</md-card-title-media>
+					</md-card-content>
+				</md-card>
+			</div>
+
+		</div>
+
+		<div flex>
+			<md-card>
+				<md-card-title>
+					<md-card-title-text>
+						<span class="md-headline">Xp Over Time</span>
+						<span class="md-subhead">How much XP has this user got over time</span>
+					</md-card-title-text>
+				</md-card-title>
+				<md-card-content layout="row" layout-align="space-between">
+					<md-card-title-media flex>
+						<nvd3 flex options="OverTime.Options" data="OverTime.Data"></nvd3>
+					</md-card-title-media>
+				</md-card-content>
+			</md-card>
+		</div>
+
+	</md-content>
+
 
 </div>
