--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   </head>
   <body ng-cloak layout="row" ng-controller="RconController">
   
-	<div ng-include="'html/connect.html'" ng-show="!Connected" flex layout="row">
+	<div ng-include="'html/connect.html'" ng-show="!Connected" flex layout="row" ng-cloak>
 	</div>
   
-  	<md-sidenav md-component-id="left" md-is-locked-open="$mdMedia('gt-sm')" class="md-whiteframe-6dp menu" ng-show="Connected">
+  	<md-sidenav md-component-id="left" md-is-locked-open="$mdMedia('gt-sm')" class="md-whiteframe-6dp menu" ng-show="Connected" ng-cloak>
 	
 		<md-list>
 			<md-list-item ng-repeat="p in pages | filter: { Nav: '' } ">
@@ -28,7 +28,7 @@
 	
 	</md-sidenav>
 	
-	<div layout="column" flex ng-show="Connected">
+	<div layout="column" flex ng-show="Connected" ng-cloak>
 	
 		<md-toolbar layout="row">
 			<div class="md-toolbar-tools">
@@ -62,6 +62,10 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/nvd3/1.8.2/nv.d3.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-nvd3/1.0.5/angular-nvd3.min.js"></script>
 	
+	<!-- Data manipulation -->
+  	<script src="js/linq.min.js"></script>
+  	
+	<!-- Our stuff -->
   	<script src="js/rconService.js"></script>
 	<script src="js/app.js"></script>
   	<script src="js/console.js"></script>
