URLs include address, automatically connected to if password is present

--- a/html/playerInfo.html
+++ b/html/playerInfo.html
@@ -3,7 +3,7 @@
 
 	Info about player {{userid}} 
 
-	<p>View <a href="#/player/{{userid}}/xp">XP info for this player</a></p>
+	<p>View <a href="#/{{address}}/player/{{userid}}/xp">XP info for this player</a></p>
 Show info about this player here
 
 </div>
