--- a/html/playerXp.html
+++ b/html/playerXp.html
@@ -3,7 +3,7 @@
 
 	<md-content flex layout-padding>
 
-		<h2>Statistics for player <a href="#/player/{{userid}}/">{{userid}}</a></h2>
+		<h2>Statistics for player <a href="#/{{address}}/player/{{userid}}/">{{userid}}</a></h2>
 
 		<div layout="row" layout-sm="column">
 
