--- a/index.html
+++ b/index.html
@@ -5,45 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Websocket Rcon</title>
-	<link href="http://ajax.googleapis.com/ajax/libs/angular_material/1.0.5/angular-material.min.css" rel="stylesheet">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/nvd3/1.8.2/nv.d3.min.css" rel="stylesheet">
-	
-	
+  	<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.css" rel="stylesheet">
+  	<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap-theme.css" rel="stylesheet">
 	<link href="rcon.css" rel="stylesheet">
   </head>
-  <body ng-cloak layout="row" ng-controller="RconController">
+  <body ng-controller="RconController">
   
-	<div ng-include="'html/connect.html'" ng-show="!Connected" flex layout="row" ng-cloak>
-	</div>
-  
-  	<md-sidenav md-component-id="left" md-is-locked-open="$mdMedia('gt-sm')" class="md-whiteframe-6dp menu" ng-show="Connected" ng-cloak>
-	
-		<md-list>
-			<md-list-item ng-repeat="p in pages | filter: { Nav: '' } ">
-				<md-button href="#{{Nav( p.originalPath )}}" class="menu_button" ng-class="{'selected' : $route.current.Title == p.Title }">
-					{{p.Title}}
-				</md-button>
-			</md-list-item>
-		</md-list>
-	
-	</md-sidenav>
-	
-	<div layout="column" flex ng-show="Connected" ng-cloak>
-	
-		<md-toolbar layout="row">
-			<div class="md-toolbar-tools">
-				<md-button class="md-icon-button  hide-gt-sm" aria-label="Settings" ng-click="OpenLeftMenu()">
-				  <md-icon md-menu-origin md-svg-icon="image/menu.svg"></md-icon>
-				</md-button>
-				<div layout-row flex><h3 class="md-toolbar-item md-breadcrumb md-headline">{{$route.current.Title}}</h3></div>
-			</div>
-		</md-toolbar>
+  	<div class="container">
 
-		<div flex layout="column">
-			<md-content flex class="Content AppBackground" layout="column" ng-view>
-			</md-content>
-		</div>
-	</div>
+  		<div ng-include="'html/connect.html'" ng-show="!Connected">
+  		</div>
+
+  		<div ng-show="Connected" class="col-sm-2 sidebar">
+
+  			<ul class="nav nav-sidebar">
+  				<li ng-repeat="p in pages | filter: { Nav: '' } " ng-class="{'active' : $route.current.Title == p.Title }">
+  					<a href="#{{Nav( p.originalPath )}}">{{p.Title}}</a>
+  				</li>
+  			</ul>
+
+  		</div>
+
+  		<div class="col-sm-10" ng-show="Connected" >
+
+			<h1 class="page-header">{{$route.current.Title}}</h1>
+  			<div class="row" ng-view></div>
+
+  		</div>
+
+  	</div>
   
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	
@@ -54,8 +45,8 @@
 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-aria.min.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-messages.min.js"></script>
 	
-	<!-- Angular Material -->
-	<script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.5/angular-material.min.js"></script>
+	<!-- Bootstrap -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/js/bootstrap.js"></script>
 	
 	<!-- For charts -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.16/d3.js"></script>
