--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
   	<script src="js/playerlist.js"></script>
   	<script src="js/playerInfo.js"></script>
   	<script src="js/playerXp.js"></script>
+  	<script src="js/chat.js"></script>
 	
   </body>
 </html>
