--- a/html/chat.html
+++ b/html/chat.html
@@ -1,6 +1,6 @@
 <div ng-controller="ChatController" id="ChatController">
 
-    <div id="vertical-container" style="height: 600px" class="Output scrollable"><div ng-repeat="line in Output" ng-class="line.Class">{{line.Message}}</div></div>
+    <div id="vertical-container" style="height: 600px" class="Output scrollable"><div ng-repeat="line in Output" ng-class="line.Class"><span class="chatname"><a href="#/{{address}}/player/{{line.UserId}}/" style="color: {{line.Color}}">{{line.Username}}</a>:</span>  {{line.Message}}</div></div>
 
 	<form ng-submit="SubmitCommand()" class="md-inline-form">
 			<div>
