fix server Info layout

--- a/html/serverInfo.html
+++ b/html/serverInfo.html
@@ -13,63 +13,41 @@
 		</div>
 
 		<div class="col-lg-4">
-			<div class="container">
-				<p>Map: {{info.Map}}</p>
-			</div>
+			<p>Map: {{info.Map}}</p>
 		</div>
 
 		<div class="col-lg-4">
-			<div class="container">
-				<p>Max Players: {{info.MaxPlayers}}</p>
-			</div>
+			<p>Max Players: {{info.MaxPlayers}}</p>
 		</div>
 
 		<div class="col-lg-4">
-			<div class="container">
-				<p>GameTime: {{info.GameTime}}</p>
-			</div>
+			<p>GameTime: {{info.GameTime}}</p>
 		</div>
 
 		<div class="col-lg-4">
-			<div class="container">
-				<p>Framerate: <span class="badge">{{info.Framerate}}</span></p>
-			</div>
+			<p>Framerate: <span class="badge">{{info.Framerate}}</span></p>
 		</div>
 
 		<div class="col-lg-4">
-			<div class="container">
-				<p>EntityCount: <span class="badge">{{info.EntityCount}}</span></p>
-			</div>
+			<p>EntityCount: <span class="badge">{{info.EntityCount}}</span></p>
 		</div>
 
 		<div class="col-lg-4">
-			<div class="container">
-				<p>Uptime: <span class="badge">{{info.Uptime}}s</span></p>
-			</div>
+			<p>Uptime: <span class="badge">{{info.Uptime}}</span></p>
 		</div>
 
 		<div class="col-lg-4">
-			<div class="container">
-				<p>Players: <span class="badge">{{info.Players}}</span></p>
-			</div>
+			<p>Players: <span class="badge">{{info.Players}}</span></p>
 		</div>
 
 		<div class="col-lg-4">
-			<div class="container">
-				<p>Joining: <span class="badge">{{info.Joining}}</span></p>
-			</div>
+			<p>Joining: <span class="badge">{{info.Joining}}</span></p>
 		</div>
 
 		<div class="col-lg-4">
-			<div class="container">
-				<p>Queued: <span class="badge">{{info.Queued}}</span></p>
-			</div>
+			<p>Queued: <span class="badge">{{info.Queued}}</span></p>
 		</div>
 
-	</div>
-
-	<div class="right row">
-		
 	</div>
 
 </div>
