make info columns responsive

--- a/html/serverInfo.html
+++ b/html/serverInfo.html
@@ -12,39 +12,39 @@
 			</h2>
 		</div>
 
-		<div class="col-lg-4">
+		<div class="col-sm-4">
 			<p>Map: {{info.Map}}</p>
 		</div>
 
-		<div class="col-lg-4">
+		<div class="col-sm-4">
 			<p>Max Players: {{info.MaxPlayers}}</p>
 		</div>
 
-		<div class="col-lg-4">
+		<div class="col-sm-4">
 			<p>GameTime: {{info.GameTime}}</p>
 		</div>
 
-		<div class="col-lg-4">
+		<div class="col-sm-4">
 			<p>Framerate: <span class="badge">{{info.Framerate}}</span></p>
 		</div>
 
-		<div class="col-lg-4">
+		<div class="col-sm-4">
 			<p>EntityCount: <span class="badge">{{info.EntityCount}}</span></p>
 		</div>
 
-		<div class="col-lg-4">
+		<div class="col-sm-4">
 			<p>Uptime: <span class="badge">{{info.Uptime}}</span></p>
 		</div>
 
-		<div class="col-lg-4">
+		<div class="col-sm-4">
 			<p>Players: <span class="badge">{{info.Players}}</span></p>
 		</div>
 
-		<div class="col-lg-4">
+		<div class="col-sm-4">
 			<p>Joining: <span class="badge">{{info.Joining}}</span></p>
 		</div>
 
-		<div class="col-lg-4">
+		<div class="col-sm-4">
 			<p>Queued: <span class="badge">{{info.Queued}}</span></p>
 		</div>
 
