--- a/html/console.html
+++ b/html/console.html
@@ -1,10 +1,10 @@
 <div ng-controller="ConsoleController" id="ConsoleController">
 
-    <div id="vertical-container" style="height: 600px" class="Output scrollable">
+    <div style="height: 600px" class="Output scrollable">
     	<div ng-repeat="line in Output" ng-class="line.Class">{{line.Message}}</div>
     </div>
 
-	<form ng-submit="SubmitCommand()" class="md-inline-form">
+	<form ng-submit="SubmitCommand()">
 		<input type="text" class="form-control" ng-model="Command" ng-keyup="KeyUp($event)" />
 	</form>
 
