--- a/html/playerInfo.html
+++ b/html/playerInfo.html
@@ -1,5 +1,5 @@
 
-<div ng-controller="PlayerInfoController" flex layout="column" id="PlayerInfoController">
+<div ng-controller="PlayerInfoController" id="PlayerInfoController">
 
 	<div class="row">
 
