--- a/html/serverInfo.html
+++ b/html/serverInfo.html
@@ -3,15 +3,20 @@
 
 	<div class="row">
 
-		<div class="col-lg-12">
+		<div class="col-sm-12">
 			<h2 class="center">
 				{{info.Hostname}}
 				<div class="btn-group pull-right">
-					<button ng-click="Refresh()" class="btn btn-default" type="button"><i class="glyphicon glyphicon-refresh"></i></button>
+					<button ng-click="refresh()" class="btn btn-default" type="button"><i class="glyphicon glyphicon-refresh"></i></button>
 				</div>
 			</h2>
 		</div>
 
+		<div class="col-sm-4" ng-repeat="(key, value) in info">
+			<p>{{key}}: <span class="badge">{{value}}</span></p>
+		</div>
+
+		<!--
 		<div class="col-sm-4">
 			<p>Map: {{info.Map}}</p>
 		</div>
@@ -47,6 +52,8 @@
 		<div class="col-sm-4">
 			<p>Queued: <span class="badge">{{info.Queued}}</span></p>
 		</div>
+
+		-->
 
 	</div>
 
