--- a/html/serverInfo.html
+++ b/html/serverInfo.html
@@ -1,56 +1,25 @@
-
 <div ng-controller="ServerInfoController" flex layout="column" id="ServerInfoController">
 
 	<div class="row">
 
 		<div class="col-sm-12">
-			<h2>
-				{{info.Hostname}}
-			</h2>
+			<h2>{{serverinfo.Hostname}}</h2>
 		</div>
 
-		<div class="col-sm-4" ng-repeat="(key, value) in info">
-			<p><span class="text-muted">{{key}}:</span> <span>{{value}}</span></p>
+		<div class="col-sm-4" ng-repeat="(key, value) in serverinfo">
+			<p>
+				<span class="text-muted">{{key}}:</span>
+				<span>{{value}}</span>
+			</p>
 		</div>
 
-		<!--
-		<div class="col-sm-4">
-			<p>Map: {{info.Map}}</p>
-		</div>
+	</div>
+	<div class="row">
 
-		<div class="col-sm-4">
-			<p>Max Players: {{info.MaxPlayers}}</p>
+		<div class="col-sm-12">
+			<nvd3 options="fpsChart.options" data="fpsChart.data"></nvd3>
+			<nvd3 options="netChart.options" data="netChart.data"></nvd3>
 		</div>
-
-		<div class="col-sm-4">
-			<p>GameTime: {{info.GameTime}}</p>
-		</div>
-
-		<div class="col-sm-4">
-			<p>Framerate: <span class="badge">{{info.Framerate}}</span></p>
-		</div>
-
-		<div class="col-sm-4">
-			<p>EntityCount: <span class="badge">{{info.EntityCount}}</span></p>
-		</div>
-
-		<div class="col-sm-4">
-			<p>Uptime: <span class="badge">{{info.Uptime}}</span></p>
-		</div>
-
-		<div class="col-sm-4">
-			<p>Players: <span class="badge">{{info.Players}}</span></p>
-		</div>
-
-		<div class="col-sm-4">
-			<p>Joining: <span class="badge">{{info.Joining}}</span></p>
-		</div>
-
-		<div class="col-sm-4">
-			<p>Queued: <span class="badge">{{info.Queued}}</span></p>
-		</div>
-
-		-->
 
 	</div>
 
