--- a/html/serverInfo.html
+++ b/html/serverInfo.html
@@ -1,4 +1,4 @@
-<div ng-controller="ServerInfoController" flex layout="column" id="ServerInfoController">
+<div ng-controller="ServerInfoController" id="ServerInfoController" data-ng-init="useCharts=true;">
 
 	<div class="row">
 
@@ -17,8 +17,74 @@
 	<div class="row">
 
 		<div class="col-sm-12">
-			<nvd3 options="fpsChart.options" data="fpsChart.data"></nvd3>
-			<nvd3 options="netChart.options" data="netChart.data"></nvd3>
+
+			<div class="panel panel-default">
+				<div class="panel-heading" id="headingPerformance">
+					<button
+						class="btn btn-xs btn-primary pull-right"
+						role="button"
+						data-toggle="collapse"
+						data-target="#performanceCollapse"
+						aria-expanded="true"
+						aria-controls="performanceCollapse">
+						toggle
+					</button>
+					<h4 class="panel-title">
+						Server Performance
+					</h4>
+				</div>
+				<div id="performanceCollapse" class="panel-collapse collapse in" aria-labelledby="headingPerformance">
+					<div class="panel-body">
+						<nvd3 options="performanceChart.options" data="performanceChart.data"></nvd3>
+					</div>
+				</div>
+			</div>
+
+			<div class="panel panel-default">
+				<div class="panel-heading" id="headingNetwork">
+
+					<button
+						class="btn btn-xs btn-primary pull-right"
+						role="button"
+						data-toggle="collapse"
+						data-target="#networkCollapse"
+						aria-expanded="true"
+						aria-controls="networkCollapse">
+						toggle
+					</button>
+					<h4 class="panel-title">
+						Server Networking
+					</h4>
+				</div>
+				<div id="networkCollapse" class="panel-collapse collapse in" aria-labelledby="headingNetwork">
+					<div class="panel-body">
+						<nvd3 options="netChart.options" data="netChart.data"></nvd3>
+					</div>
+				</div>
+			</div>
+
+			<div class="panel panel-default">
+				<div class="panel-heading" id="headingPlayers">
+					<button
+						class="btn btn-xs btn-primary pull-right"
+						role="button"
+						data-toggle="collapse"
+						data-target="#playersCollapse"
+						aria-expanded="true"
+						aria-controls="playersCollapse">
+						toggle
+					</button>
+					<h4 class="panel-title">
+						Players
+					</h4>
+				</div>
+				<div id="playersCollapse" class="panel-collapse collapse in" aria-labelledby="headingPlayers">
+					<div class="panel-body">
+						<nvd3 options="playersChart.options" data="playersChart.data"></nvd3>
+					</div>
+				</div>
+			</div>
+
 		</div>
 
 	</div>
