--- a/app/player/info.html
+++ b/app/player/info.html
@@ -1,5 +1,5 @@
 
-<div ng-controller="PlayerInfoController" id="PlayerInfoController">
+<div ng-controller="playerInfoController" id="PlayerInfoController">
 
 	<div class="row">
 
