--- a/app/server/info.html
+++ b/app/server/info.html
@@ -1,4 +1,4 @@
-<div ng-controller="ServerInfoController" id="ServerInfoController" data-ng-init="useCharts=true;">
+<div ng-controller="serverInfoController" id="ServerInfoController" data-ng-init="useCharts=true;">
 
 	<div class="row">
 
