--- a/app/core/header.html
+++ b/app/core/header.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default" ng-controller="ServerInfoController" ng-show="serverinfo">
+<nav class="navbar navbar-default" ng-controller="serverInfoController" ng-show="serverinfo">
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-header" aria-expanded="false">
@@ -33,7 +33,7 @@
         {{serverinfo.EntityCount|number}}
       </p>
 
-      <button class="btn btn-danger navbar-btn navbar-right" type="button" ng-click="Disconnect()">Disconnect</button>
+      <button class="btn btn-danger navbar-btn navbar-right" type="button" ng-click="disconnect()">Disconnect</button>
 
     </div>
   </div>
